feat: add scheduler and job to storage the statistics data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 services:
   php:
     build: ./docker/php
-    container_name: swapi-php
     working_dir: /var/www/html
     volumes:
       - ./backend:/var/www/html
@@ -10,7 +9,16 @@ services:
       - APP_ENV=local
       - APP_DEBUG=true
     command: >
-      sh -c "composer install --prefer-dist --no-interaction && php-fpm"
+      sh -c "composer install --prefer-dist --no-interaction && php artisan migrate --force && php-fpm"
+    depends_on:
+      mysql:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "php artisan migrate:status >/dev/null 2>&1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   nginx:
     build: ./docker/nginx
@@ -35,3 +43,39 @@ services:
     environment:
       - VITE_BACKEND_URL=http://localhost:8080/api
     command: ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
+    
+  mysql:
+    image: mysql:8.0
+    container_name: swapi-mysql
+    restart: unless-stopped
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_DATABASE: swapi
+      MYSQL_USER: swapi
+      MYSQL_PASSWORD: swapi
+      MYSQL_ROOT_PASSWORD: root
+    volumes:
+      - mysql_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  scheduler:
+    extends: php
+    command: ["php", "artisan", "schedule:work"]
+    depends_on:
+      php:
+        condition: service_healthy
+
+  queue:
+    extends: php
+    command: ["php", "artisan", "queue:work", "--tries=3"]
+    depends_on:
+      php:
+        condition: service_healthy
+
+volumes:
+  mysql_data:
