--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,12 +20,14 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+SWAPI_BASE_URL=https://swapi.dev/api
+
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=swapi
+DB_USERNAME=swapi
+DB_PASSWORD=swapi
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
