--- a/backend/.env.example
+++ b/backend/.env.example
@@ -29,7 +29,7 @@ DB_DATABASE=swapi
 DB_USERNAME=swapi
 DB_PASSWORD=swapi
 
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -39,13 +39,14 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
+CACHE_DRIVER=redis
 CACHE_STORE=database
 # CACHE_PREFIX=
 
-MEMCACHED_HOST=127.0.0.1
+# MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
